Fixed horizontal scrolling

--- a/css/main.scss
+++ b/css/main.scss
@@ -604,6 +604,8 @@ $social-width: 400px;
 }
 
 .the-store {
+    overflow-x: hidden;
+
     .store-container {
         position: relative;
     }
